--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "morslate"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "MIT"
+readme = "README.md"
+authors = ["Lyssieth <lyssieth@rax.ee>"]
+categories = ["command-line-utilities"]
+keywords = ["cli", "utility", "morse"]
+description = "A commandline morse code encoder/decoder"
+repository = "https://github.com/lyssieth/morslate"
 
 [dependencies]
 clap = "3.0.0-rc.7"
